--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32717,6 +32717,15 @@ select {
           animation: bounce 1s infinite;
 }
 
+.pagina{
+  height: 100vh !important;
+}
+
+.scrollbox{
+  height: 90vh;
+  overflow-y: scroll;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -192176,4 +192185,3 @@ select {
             animation: bounce 1s infinite;
   }
 }
-
