--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32726,6 +32726,12 @@ select {
   overflow-y: scroll;
 }
 
+[data-main-panel="true"]
+{
+  height: 90vh;
+  overflow-y: scroll;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
